course assistant navbar

--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -70,7 +70,7 @@
 
 
       <li class="nav-item active">
-        <a class="nav-link text-right" href="{% url 'courseAssistant' %}">
+        <a class="nav-link text-right" href="{% url 'courseAssistant' study_id=request.session.study_id %}">
           <i class="fab fa-fw fa-hire-a-helper"></i>
           <span>دستیار اخذ درس</span></a>
       </li>
