--- a/core/templates/core/CourseList.html
+++ b/core/templates/core/CourseList.html
@@ -34,7 +34,7 @@
 
                       {% for course in courses %}
                       {% if course.course_type == 1 %}
-                        <tr class="toggler">
+                        <tr class="toggler toggler1">
                             <td>{{course.title}} </td>
                             <td>{{course.vahed_nazari}}</td>
                             <td>{{course.vahed_amali}}</td>
