--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -168,6 +168,17 @@
 
             {% endfor %}
 
+              <div class="col-xl-4 col-md-6 mb-4">
+                <div class="card shadow my-4">
+                  <div class="card-body">
+                    <div class=" py-5 pb-2">
+                      <a href="{% url 'newStudyFrom' %}">
+                      +
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
           </div>
 
         </div>
