tweaked, passed_courses count & situation edit ok

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -21,8 +21,8 @@
         <div class="card-body">
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
-              <h4 class="my-2 text-right">تعداد واحد پاس شده</h4>
-              <div class="h5 mb-0 font-weight-bold card-number">120</div>
+              <h4 class="my-2 text-right">تعداد دروس  گذرانده شده</h4>
+              <div class="h5 mb-0 font-weight-bold card-number">{{passed}}</div>
             </div>
             
           </div>
@@ -35,8 +35,8 @@
         <div class="card-body">
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
-              <h4 class="my-2 text-right">تعداد واحد پاس نشده</h4>
-              <div class="h5 mb-0 font-weight-bold card-number">20</div>
+              <h4 class="my-2 text-right">تعداد دروس گذرانده نشده</h4>
+              <div class="h5 mb-0 font-weight-bold card-number">{{remaining}}</div>
             </div>
             
           </div>
