--- a/core/templates/core/CourseSituation.html
+++ b/core/templates/core/CourseSituation.html
@@ -68,6 +68,7 @@
         method: 'POST',
         success: function (result) {
             console.log('success:' + result.id);
+            alert('با موفقیت ثبت شد!')
         
         },
         error: function () {
