pie chart data fixed

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -22,7 +22,7 @@
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
               <h4 class="my-2 text-right">تعداد دروس  گذرانده شده</h4>
-              <div class="h5 mb-0 font-weight-bold card-number">{{passed}}</div>
+              <div class="h5 mb-0 font-weight-bold card-number" id="passed-units">{{passed}}</div>
             </div>
             
           </div>
@@ -36,7 +36,7 @@
           <div class="row no-gutters align-items-center">
             <div class="col mr-2">
               <h4 class="my-2 text-right">تعداد دروس گذرانده نشده</h4>
-              <div class="h5 mb-0 font-weight-bold card-number">{{remaining}}</div>
+              <div class="h5 mb-0 font-weight-bold card-number" id="remaining-units">{{remaining}}</div>
             </div>
             
           </div>
