pie chart design

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -59,6 +59,8 @@
         <div class="card-body">
           <div class="chart-pie pt-4 pb-2">
             <canvas id="myPieChart"></canvas>
+
+            <span id="passed-units-span">0</span>
           </div>
         </div>
       </div>
@@ -73,7 +75,7 @@
 
         <div class="card-body" style="min-height:19.8em;">
           <div >
-            <div style="font-size: 10em;">14.5</div>
+            <div style="font-size: 10em; text-align:center;">14.5</div>
           </div>
         </div>
       </div>
