--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -231,3 +231,10 @@ tbody{
     cursor: pointer;
     transform: translateY(-3px);
 }
+
+#passed-units-span{
+	position: absolute;
+    top: 43%;
+    right: 44%;
+    font-size: 2.5em;
+}
