--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -22,6 +22,8 @@
 
   <!-- Custom styles for this template-->
   <link href="{% static 'core/css/style.css' %}" rel="stylesheet">
+  
+  <link href="{% static 'core/css/main.css' %}" rel="stylesheet">
   <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
   
   {% block stylesheet %}{% endblock %}
