--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -33,7 +33,7 @@
 
   <div id="wrapper">
 
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion pr-0" id="accordionSidebar">
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion pr-0 d-print-none" id="accordionSidebar">
 
       <a class="sidebar-brand d-flex align-items-center justify-content-center">
         <div class="sidebar-brand-icon rotate-n-15">
