--- a/core/templates/core/CourseSituation.html
+++ b/core/templates/core/CourseSituation.html
@@ -17,8 +17,8 @@
           </div>
 
           <div class="row table-responsive-sm table-responsive-md">
-
-            <table class="custom-table">
+          <p><button class="btn btn-outline-primary d-print-none" onclick="sortTable()"> مرتب سازی لیست </button></p>
+            <table class="custom-table" id="courseSituationId">
               <thead>
                   <tr>
                       <th>نام درس</th>
@@ -105,6 +105,31 @@
  else if (myarr>=10){
     $('.score-input').css("background-color" , "#90EE90").css("color" , "#000")
   } */
+</script>
+
+<script>
+function sortTable() {
+  var table, rows, switching, i, x, y, shouldSwitch;
+  table = document.getElementById("courseSituationId");
+  switching = true;
+  while (switching) {
+    switching = false;
+    rows = table.rows;
+    for (i = 1; i < (rows.length - 1); i++) {
+      shouldSwitch = false;
+      x = rows[i].getElementsByTagName("TD")[0];
+      y = rows[i + 1].getElementsByTagName("TD")[0];
+      if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+        shouldSwitch = true;
+        break;
+      }
+    }
+    if (shouldSwitch) {
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+    }
+  }
+}
 </script>
 
  {% endblock content %}
