--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -172,9 +172,12 @@
                 <div class="card shadow my-4">
                   <div class="card-body">
                     <div class=" py-5 pb-2">
-                      <a href="{% url 'newStudyFrom' %}">
+                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                        +
+                      </button>
+                      <!-- <a href="{% url 'newStudyFrom' %}"> 
                       +
-                      </a>
+                      </a>-->
                     </div>
                   </div>
                 </div>
@@ -194,7 +197,7 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
-
+<!-- modal -->
   <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -212,7 +215,25 @@
       </div>
     </div>
   </div>
-
+  <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Bootstrap core JavaScript-->
   <script src="{% static 'core/vendor/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'core/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
