--- a/core/templates/core/CourseAssistant.html
+++ b/core/templates/core/CourseAssistant.html
@@ -18,8 +18,9 @@
           <div class="row">
             {% for course in list_allowed_courses %}
 
-            <div class="col-xl-3 col-lg-5">
-              <div class="course-item text-center position-relative">
+            <div class="col-xl-3 col-lg-5 mb-4">
+            <div class="w-100 bg-light p-2">
+               <div class="course-item text-center position-relative mb-2">
                 <div class="course-item-name p-2">{{course.title}}</div>
                 <div class="course-item-vahed py-2">
                     <span class="p-2">
@@ -33,16 +34,36 @@
                     X
                 </div>
             </div>
+            {% for corequisite in course.corequisite_courses.all %}
+<div class="text-center">(همنیاز )</div>
+            <div class="w-100">
+              <div class="course-item text-center position-relative">
+                <div class="course-item-name p-2">
+                
+                {{corequisite.title}}</div>
+                <div class="course-item-vahed py-2">
+                    <span class="p-2">
+                      {{corequisite.vahed_nazari}}
+                    </span>
+                    <span class="p-2"> 
+                        {{corequisite.vahed_amali}}
+                    </span>
+                </div>
+                {% comment %} <div class="close-icon" onClick={this.Remove.bind(this,item.id)}>
+                    X
+                </div> {% endcomment %}
             </div>
+            </div>
+          {% endfor %}
+            </div>
+            
+            </div>
+           
 
           {% endfor %}
-            {% for score in scores %}
-<div>{{score.course_id}}:{{score.value}}</div>
-              {% endfor %}
+           
 
-            {% for d in dif %}
-<div class="w-100" style="backgroun-color:red">{{d.title}}</div>
-              {% endfor %}
+     
 <!-- 
             <div class="col-xl-3 col-lg-5">
               <div class="course-item text-center position-relative">
