--- a/core/templates/core/CourseAssistant.html
+++ b/core/templates/core/CourseAssistant.html
@@ -35,12 +35,13 @@
                 </div>
             </div>
             {% for corequisite in course.corequisite_courses.all %}
-<div class="text-center">(همنیاز )</div>
+            {% if corequisite.id not in allscored_course_ids %}
+            <div class="text-center">(همنیاز )</div>
             <div class="w-100">
               <div class="course-item text-center position-relative">
                 <div class="course-item-name p-2">
                 
-                {{corequisite.title}}</div>
+               {{corequisite.id}} {{corequisite.title}}</div>
                 <div class="course-item-vahed py-2">
                     <span class="p-2">
                       {{corequisite.vahed_nazari}}
@@ -54,6 +55,8 @@
                 </div> {% endcomment %}
             </div>
             </div>
+          {% endif %}
+
           {% endfor %}
             </div>
             
@@ -63,7 +66,8 @@
           {% endfor %}
            
 
-     
+    
+           
 <!-- 
             <div class="col-xl-3 col-lg-5">
               <div class="course-item text-center position-relative">
