show courses if Prerequisites passed

--- a/core/templates/core/CourseAssistant.html
+++ b/core/templates/core/CourseAssistant.html
@@ -17,7 +17,7 @@
 
           <div class="row">
             {% for course in list_allowed_courses %}
-
+              {% if course.prerequisite_courses.first.id not in allscored_course_ids %}
             <div class="col-xl-3 col-lg-5 mb-4">
             <div class="w-100 bg-light p-2">
                <div class="course-item text-center position-relative mb-2">
@@ -41,7 +41,7 @@
               <div class="course-item text-center position-relative">
                 <div class="course-item-name p-2">
                 
-               {{corequisite.id}} {{corequisite.title}}</div>
+          {{corequisite.title}}</div>
                 <div class="course-item-vahed py-2">
                     <span class="p-2">
                       {{corequisite.vahed_nazari}}
@@ -62,7 +62,7 @@
             
             </div>
            
-
+          {% endif %}
           {% endfor %}
            
 
