--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -225,7 +225,25 @@
           </button>
         </div>
         <div class="modal-body">
-          ...
+           <form class="ftform" method="POST">
+                        {% csrf_token %}
+                            <div class="form-group row">
+                                    <label for="inputState">رشته(چارت)</label>
+                                    <select name="chart" id="inputState" class="form-control">
+                                      <option selected>انتخاب کنید</option>
+                                      {% for chart in charts  %}
+                                        <option value="{{chart.id}}">{{chart}}</option>
+                                      {% endfor %}
+
+
+                                    </select>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-12">
+                                    <button type="submit" class="btn btn-primary"> تکمیل اطلاعات </button>
+                                </div>
+                            </div>
+                        </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
