--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -239,7 +239,7 @@
                                     </select>
                             </div>
                             <div class="form-group row">
-                                <div class="col-sm-12">
+                                <div class="col-sm-12">ّ
                                     <button type="submit" class="btn btn-primary"> تکمیل اطلاعات </button>
                                 </div>
                             </div>
