--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -16,7 +16,7 @@
 
   <div class="row">
 
-    <div class="col-xl-6 col-md-6 mb-4">
+    <div class="col-xl-4 col-md-4 mb-4">
       <div class="card position-relative shadow h-100 py-2  min-height" >
         <div class="card-body">
           <div class="row no-gutters align-items-center">
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="col-xl-6 col-md-6 mb-4">
+    <div class="col-xl-4 col-md-4 mb-4">
       <div class="card position-relative shadow h-100 py-2  min-height">
         <div class="card-body">
           <div class="row no-gutters align-items-center">
@@ -43,7 +43,19 @@
         </div>
       </div>
     </div>
-
+<div class="col-xl-4 col-md-4 mb-4">
+      <div class="card position-relative shadow h-100 py-2  min-height">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col mr-2">
+              <h4 class="my-2 text-right">تعداد واحد گذرانده شده</h4>
+              <div class="h5 mb-0 font-weight-bold card-number">{{sum_vahed_passed}}</div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
 
@@ -75,7 +87,7 @@
 
         <div class="card-body" style="min-height:19.8em;">
           <div >
-            <div style="font-size: 10em; text-align:center;">14.5</div>
+            <div style="font-size: 80px; text-align:center;">{{average}}</div>
           </div>
         </div>
       </div>
