add condition for prerequisite_courses

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -218,12 +218,12 @@
   <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
+        {% comment %} <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-        </div>
+        </div> {% endcomment %}
         <div class="modal-body">
            <form class="ftform" method="POST">
                         {% csrf_token %}
@@ -245,10 +245,10 @@
                             </div>
                         </form>
         </div>
-        <div class="modal-footer">
+        {% comment %} <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+        </div> {% endcomment %}
       </div>
     </div>
   </div>
