--- a/core/templates/core/CourseAssistant.html
+++ b/core/templates/core/CourseAssistant.html
@@ -17,7 +17,10 @@
 
           <div class="row">
             {% for course in list_allowed_courses %}
-              {% if course.prerequisite_courses.first.id not in allscored_course_ids %}
+
+        
+             {% if course.prerequisite_courses.first  is None %}
+             None
             <div class="col-xl-3 col-lg-5 mb-4">
             <div class="w-100 bg-light p-2">
                <div class="course-item text-center position-relative mb-2">
@@ -41,7 +44,55 @@
               <div class="course-item text-center position-relative">
                 <div class="course-item-name p-2">
                 
-          {{corequisite.title}}</div>
+                  {{corequisite.title}}</div>
+                <div class="course-item-vahed py-2">
+                    <span class="p-2">
+                      {{corequisite.vahed_nazari}}
+                    </span>
+                    <span class="p-2"> 
+                        {{corequisite.vahed_amali}}
+                    </span>
+                </div>
+                {% comment %} <div class="close-icon" onClick={this.Remove.bind(this,item.id)}>
+                    X
+                </div> {% endcomment %}
+            </div>
+            </div>
+          {% endif %}
+
+          {% endfor %}
+            </div>
+            
+            </div>
+           
+        
+          
+
+         {% elif  course.prerequisite_courses.first.id  in allscored_course_ids %}
+            <div class="col-xl-3 col-lg-5 mb-4">
+            <div class="w-100 bg-light p-2">
+               <div class="course-item text-center position-relative mb-2">
+                <div class="course-item-name p-2">{{course.title}}</div>
+                <div class="course-item-vahed py-2">
+                    <span class="p-2">
+                      {{course.vahed_nazari}}
+                    </span>
+                    <span class="p-2"> 
+                        {{course.vahed_amali}}
+                    </span>
+                </div>
+                <div class="close-icon" onClick={this.Remove.bind(this,item.id)}>
+                    X
+                </div>
+            </div>
+            {% for corequisite in course.corequisite_courses.all %}
+            {% if corequisite.id not in allscored_course_ids %}
+            <div class="text-center">(همنیاز )</div>
+            <div class="w-100">
+              <div class="course-item text-center position-relative">
+                <div class="course-item-name p-2">
+                
+                  {{corequisite.title}}</div>
                 <div class="course-item-vahed py-2">
                     <span class="p-2">
                       {{corequisite.vahed_nazari}}
@@ -63,28 +114,10 @@
             </div>
            
           {% endif %}
-          {% endfor %}
-           
+          {% endfor %}   
+       
 
-    
-           
-<!-- 
-            <div class="col-xl-3 col-lg-5">
-              <div class="course-item text-center position-relative">
-                <div class="course-item-name p-2">مهندسی نت</div>
-                <div class="course-item-vahed py-2">
-                    <span class="p-2">
-                       2
-                    </span>
-                    <span class="p-2"> 
-                        2
-                    </span>
-                </div>
-                <div class="close-icon" onClick={this.Remove.bind(this,item.id)}>
-                    X
-                </div>
-            </div>
-            </div> -->
+       
           </div>
 
         </div>
